--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 #Gradle properties
-quarkusPluginId=io.quarkus
+#Tue Nov 02 11:21:20 EDT 2021
 quarkusPluginVersion=2.4.0.Final
-quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
+quarkusPluginId=io.quarkus
+quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformVersion=2.4.0.Final
