feat(expenses):Implement Api endpoint and PSQL DB Entity + Connection

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 #Gradle properties
-quarkusPluginId=io.quarkus
+#Mon Nov 01 14:52:04 CDT 2021
 quarkusPluginVersion=2.4.0.Final
-quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
+quarkusPluginId=io.quarkus
+quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformVersion=2.4.0.Final
